--- a/CHANGELOG/Changelog.txt
+++ b/CHANGELOG/Changelog.txt
@@ -2,3 +2,5 @@ LINK FOR GITHUB COMMITS ON MASTER BRANCH: https://github.com/FRC3546/2023-Compet
 
 1/30/2023 JF Created the template for this year, also created a flipper subsystem,
 (read my commit for more info). Also added this changelog.
+1/31/2023 JF Added code for our delivery arm based off of our current specs.
+We will need an encoder for the extending arm.
